--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,8 @@ services:
     command:
       - sleep
       - infinity
-
-
-
-
-
-
+    cap_add:
+       - NET_ADMIN            # needed to setup network interfaces
+#       - SYS_MODULE           # might be needed if wireguard is not used on the host machine to load some kernel modules ????
+    sysctls:
+       - net.ipv4.conf.all.src_valid_mark=1     # wg-quick wants to do this, but it can't, so do it ahead of time for it.
