--- a/setup.cfg
+++ b/setup.cfg
@@ -16,5 +16,9 @@ install_requires =
   requests_toolbelt
   wireguard_tools
   qrcode_term
-  bolt11 @ git+https://github.com/lnbits/bolt11.git
+  pystemd
   helpers2 @git+https://github.com/AndySchroder/helpers2.git
+  lnd-grpc-client @git+https://github.com/AndySchroder/lnd-grpc-client.git
+
+  # recently the latest version of bolt11 does not work, so anchor to a known good commit
+  bolt11 @ git+https://github.com/lnbits/bolt11.git@540b4062dda01ff2338ef6cd3ab28957dba71880
